src/test/deca/syntax/valid/DeclClassParam.deca
//Test les paramètres dans une déclaration de méthode

class Thing {

    int getI(int i){
        print("cool");
    }

}
