src/test/deca/syntax/invalid/ClassMethodeSansType.deca
//méthode dans une classe sans type

class Thing {
    
    getI(){
    }

}
